--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=3001
+PORT=3000
 
-URI_MONGO=mongodb://localhost:27017/gestorVentas
+URI_MONGO=mongodb://localhost:27017/blog
 
 SECRETORPRIVATEKEY=Est03sMyPublicK3y1609
