--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
 
-URI_MONGO=mongodb://localhost:27017/blog
+URI_MONGO=mongodb+srv://jperalta:hmg9dsRj6CJC7531@cluster0.grvwlol.mongodb.net/blog
 
 SECRETORPRIVATEKEY=Est03sMyPublicK3y1609
